--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "gameboard.js",
   "scripts": {
-    "build": "webpack"
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
